# tics

./: .gitignore  .prettierignore  LICENSE  README.md  TODO.md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  tsr.config.json
.github/workflows/: publish.yaml
backend/: common.py  file_system.py  hardware_info.py  indexing.py  ipc_bridge.py  main.py  model_manager.py  pyproject.toml  search.py
scripts/: after-pack.ts
src/main/: autoUpdater.ts  backend.ts  config.ts  folder-scanner.ts  folder-watcher.ts  index.ts  ipcHandlers.ts  state.ts  watcher.ts  window.ts
src/preload/: index.d.ts  index.ts
src/preload/utils/: file-scanner.ts  fileScanner.ts  model-utils.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx  routeTree.gen.ts  window.d.ts
src/renderer/src/assets/: main.css
src/renderer/src/components/: app-sidebar.tsx  splash-screen.tsx
src/renderer/src/components/home/: home-screen.tsx  image-gallery.tsx  upload-to-root.tsx
src/renderer/src/components/indexing/: shared.tsx
src/renderer/src/components/onboarding/: onboarding.tsx  step-01-library.tsx  step-02-hardware.tsx  step-03-model.tsx  (+1 more)
src/renderer/src/hooks/: use-backend-events.tsx  use-backend-ready.tsx  use-file-upload.ts  use-folder-watcher.tsx  use-indexing.ts  use-websocket.tsx
src/renderer/src/routes/: __root.tsx  index.tsx  settings.tsx
src/renderer/src/stores/: app-store.ts  index.ts  onboarding-store.ts  settings-store.ts
src/renderer/src/utils/: image-gallery.ts
(+44 files in other folders)
