[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "huggingface-hub>=1.8.0",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pyinstaller>=6.19.0",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.4.0",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]
